--- a/style.css
+++ b/style.css
@@ -1,165 +1,205 @@
-*{
-    margin:0;
+* {
+    margin: 0;
     padding: 0;
-    font-family: 'Poppins ', sans-serif;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
-body{
+
+body {
     background: rgb(15, 15, 15);
     color: white;
 }
-#header{
+
+#header {
     width: 100%;
     height: 100vh;
-    /* background-image: url('fnbg.jpeg'); */
     background-size: cover;
     background-position: right; 
 }
-.container{
+
+.container {
     padding: 10px 10%;
 }
-.back-video{
+
+.back-video {
     position: absolute;
     right: 0;
     bottom: 0;
     z-index: -1;
 }
-@media (min-aspect-ratio: 16/9)
-{
-    .back-video{
+
+@media (min-aspect-ratio: 16/9) {
+    .back-video {
         width: 100%;
         height: auto;
     }
 }
-@media (max-aspect-ratio: 16/9)
-{
-    .back-video{
+
+@media (max-aspect-ratio: 16/9) {
+    .back-video {
         width: auto;
         height: 100%;
     }
 }
-nav{
-    display: flex ;
-    align-items:center;
+
+nav {
+    display: flex;
+    align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.logo{
-    width: 500px; 
+
+.logo {
+    max-width: 300px; 
+    padding: 10px;
 }
-nav ul li{
-    display: inline-block;
+
+nav ul {
+    display: flex;
+    align-items: center;
     list-style: none;
+}
+
+nav ul li {
     margin: 10px 20px;
 }
-nav ul li a{ 
-    color:white;
+
+nav ul li a {
+    color: white;
     text-decoration: none;
     font-size: 18px;
-    position: relative; 
+    position: relative;
 }
-nav ul li a::after{
+
+nav ul li a::after {
     content: '';
     width: 0;
     height: 3px;
-    background:#ff004f;
+    background: #ff004f;
     position: absolute;
     left: 0;
     bottom: -6px;
-    transition-duration: 0.75s;
+    transition: width 0.75s;
 }
-nav ul li a:hover::after{
-    width: 100%
+
+nav ul li a:hover::after {
+    width: 100%;
 }
-.header-text{
+
+.header-text {
     margin-top: 20%;
     font-size: 30px;
 }
-.header-text h1{
+
+.q1 {
+    font-size: 30px;
+    margin-top: 10px;
+}
+
+.header-text h1 {
     font-size: 60px;
     margin-top: 20px;
 }
-.header-text h1 span{
+
+
+.header-text h1 span {
     color: #ff004f;
 }
-.header-text p{
+
+.header-text p {
     color: #ff004f;
 }
+
 #about {
     padding: 80px 0;
     color: #ababab;
 }
-.row{
+
+.row {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
 }
-.about-col-1{
-    flex-basis:35%;
+
+.about-col-1 {
+    flex-basis: 35%;
 }
-.about-col-1 img{
+
+.about-col-1 img {
     width: 100%;
     border-radius: 15px;
 }
-.about-col-2{
-     flex-basis: 60%;
+
+.about-col-2 {
+    flex-basis: 60%;
 }
-.sub-title{
+
+.sub-title {
     font-size: 60px;
     font-weight: 600;
     color: #fff;
 }
-.tab-titles{
+
+.tab-titles {
     display: flex;
     margin: 20px 0 40px;
 }
-.tab-links{
+
+.tab-links {
     margin-right: 50px;
     font-size: 18px;
     font-weight: 500;
     cursor: pointer;
     position: relative;
 }
-.tab-links::after{
+
+.tab-links::after {
     content: '';
     width: 0;
     height: 3px;
     background: #ff004f;
     position: absolute;
-    left:0;
+    left: 0;
     bottom: -8px;
     transition: 0.5s;
 }
-.tab-links.active-links::after{
-    width: 50% ;
+
+.tab-links.active-links::after {
+    width: 50%;
 }
-.tab-contents ul li{
+
+.tab-contents ul li {
     list-style: none;
-    margin:10px 0;
+    margin: 10px 0;
 }
-.tab-contents ul li span{
-    color: #ff004f;  
-    font-size: 14px;                                                                                                                                                                                                                    
+
+.tab-contents ul li span {
+    color: #ff004f;
+    font-size: 14px;
 }
-.tab-contents{
+
+.tab-contents {
     display: none;
 }
-.tab-contents.active-tab{
+
+.tab-contents.active-tab {
     color: #b54769;
     font-size: 14px;
     display: block;
 }
-/* ------services----- */
-#services{
+
+#services {
     padding: 30px 0;
 }
-.services-list{
+
+.services-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
-.services-list div{
+
+.services-list div {
     background: #262626;
     padding: 40px;
     font-size: 13px;
@@ -167,48 +207,56 @@ nav ul li a:hover::after{
     border-radius: 10px;
     transition: background 0.5s, transform 0.5s;
 }
-.services-list div i{
+
+.services-list div i {
     font-size: 50px;
     margin-bottom: 30px;
 }
-.services-list div h2{
-    font-size:30px;
+
+.services-list div h2 {
+    font-size: 30px;
     font-weight: 500;
     margin-bottom: 15px;
-} 
-.services-list div a{
-    text-decoration:none;
-    color:#fff;
+}
+
+.services-list div a {
+    text-decoration: none;
+    color: #fff;
     font-size: 12px;
     margin-top: 20px;
     display: inline-block;
 }
-.services-list div:hover{
+
+.services-list div:hover {
     background: #ff004f;
     transform: translateY(-10px);
 }
-#portfolio{
-    padding: 50px 0;
 
+#portfolio {
+    padding: 50px 0;
 }
-.work-list{
+
+.work-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
-.work{
+
+.work {
     border-radius: 10px;
     position: relative;
     overflow: hidden;
 }
-.worl img{
+
+.work img {
     width: 100%;
     border-radius: 10px;
     display: block;
     transition: transform 0.5s;
 }
- .layer{
+
+.layer {
     width: 100%;
     height: 0%;
     background: linear-gradient(rgba(0,0,0,0.6), #ff004f);
@@ -225,12 +273,14 @@ nav ul li a:hover::after{
     text-align: center;
     font-size: 14px;
     transition: height 0.5s;
- }
-.layer h3{
+}
+
+.layer h3 {
     font-weight: 500;
     margin-bottom: 20px;
 }
-.layer a{
+
+.layer a {
     margin-top: 20px;
     color: #ff004f;
     text-decoration: none;
@@ -242,67 +292,76 @@ nav ul li a:hover::after{
     border-radius: 50%;
     text-align: center;
 }
-.work:hover img{
+
+.work:hover img {
     transform: scale(1.1);
 }
-.work:hover .layer{
+
+.work:hover .layer {
     height: 100%;
 }
-.btn{
-    display: block;
-    margin: 50px auto;
-    width: fit-content;
-    border: 1px solid  #ff004f;
-    padding: 14px 50px;
-    border-radius: 6px;
-    text-decoration: none;
-    color: #fff;
-    transition: background 0.5s;
 
+.btn{
+    display: inline-block;
+    padding: 12px 28px;
+color: rgb(40, 137, 158);
+border-radius: 40px;
+box-shadow: 0 0 10px rgb(40, 137, 158);;
+text-decoration: none;
+color:rgb(40, 137, 158);
+letter-spacing: 1px;
+font-weight: 400;
+opacity: 0;
+animation: slideTop 3s ease forwards;
+animation-delay: 2s;
 }
-.btn:hover{
-    background: #ff004f;
-}
-.contact-left{
+
+
+.contact-left {
     flex-basis: 35%;
 }
-.contact-right{
+
+.contact-right {
     flex-basis: 60%;
 }
-.contact-left p{
+
+.contact-left p {
     margin-top: 30px;
 }
 
-.contact-left p i{
+.contact-left p i {
     color: #ff004f;
     margin-right: 15px;
     font-size: 25px;
-
 }
-.social-icons{
+
+.social-icons {
     margin-top: 30px;
 }
-.social-icons a{
+
+.social-icons a {
     text-decoration: none;
     font-size: 30px;
     margin-right: 15px;
     color: #ababab;
     display: inline-block;
 }
-.social-icons a:hover{
-    color:#ff004f;
-    transform: translateY(-5px);
 
+.social-icons a:hover {
+    color: #ff004f;
+    transform: translateY(-5px);
 }
-.btn.btn2{
+
+.btn.btn2 {
     display: inline-block;
     background: #ff004f;
 }
-.contact-right form{
-    width: 100%;
 
+.contact-right form {
+    width: 100%;
 }
-form input, form textarea{
+
+form input, form textarea {
     width: 100%;
     border: 0;
     outline: none;
@@ -313,13 +372,15 @@ form input, form textarea{
     font-size: 18px;
     border-radius: 6px;
 }
-form .btn2{
+
+form .btn2 {
     padding: 14px 60px;
     font-size: 18px;
     margin-top: 20px;
     cursor: pointer;
 }
-.copyright{
+
+.copyright {
     width: 100%;
     text-align: center;
     padding: 25px 0;
@@ -327,89 +388,65 @@ form .btn2{
     font-weight: 300;
     margin-top: 20px;
 }
-/* css small screen */
-nav .fas{
-    display: none;
+
+nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-@media only screen and (max-width: 600px){
-    #header{
+
+/* Small screen adjustments */
+@media only screen and (max-width: 600px) {
+    #header {
         background-image: url(images/phone-background.png);
-
     }
-.header-text{
-    margin-top: 100%;
-    font-size: 16px;
+    nav .fas {
+        display: block;
+        font-size: 25px;
+        cursor: pointer;
+        position: absolute;
+        top: 15px;
+        right: 15px;
+    }
 
+    nav ul {
+        background: #ff004f;
+        position: fixed;
+        top: 0;
+        right: -100%;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        flex-direction: column;
+        align-items: flex-start;
+        transition: right 0.3s ease; /* Smooth transition */
+    }
+
+    nav ul li {
+        display: block;
+        margin: 25px;
+    }
+
+    nav ul.show { /* Class to show the sidebar */
+        right: 0;
+    }
+
+    #about .row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #about .about-col-1, #about .about-col-2 {
+        flex-basis: 100%;
+        text-align: center;
+    }
 }
-.header-text h1{
-    font-size: 30px;
-}
-nav .fas{
-    display: block;
-    font-size: 25px;
-}
-nav ul{
+
+/* Hover Effects */
+.services-list div:hover {
     background: #ff004f;
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 200px;
-    height:100vh;
-    padding-top: 50px;
-    z-index: 2;
-    transition: right 0.5s;
-    }
-nav ul li{
-    display: block;
-    margin: 25px;
+    transform: translateY(-10px);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3); /* Adds a shadow effect on hover */
 }
-nav ul .fas{
-    position: absolute;
-    top: 25px;
-    left: 25px;
-    cursor: pointer;
-}
-.sub-title{
-    font-size: 40px;
-}
-.about-col-1, .about-col-2{
-    flex-basis: 100%;
-}
-.about-col-1{
-    margin-bottom: 30px;
-}
-.about-col-2{
-    font-size: 14px;
-}
-.tab-links{
-    font-size: 16px;
-    margin-right: 20px;
-}
-.contact-left, .contact-right{
-    flex-basis: 100%;
-}
-.copyright{
-    font-size: 14px; 
-}
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
